--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
 <body>
 
-
 <header class="view-bg" >
     <div class="container">
         <div class="fullscreen-bg">
@@ -46,7 +45,7 @@
 
 <section class="first">
     <div class="container">
-        <h1 class="about__h1">ABOUT</h1>
+        <h1 class="about__h1 revealator-slideup revealator-delay1 revealator-once">ABOUT</h1>
         <p class="about__txt">
 
             I'm Natalie, a web designer and developer.
