--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<header class="view-bg" >
+<header class="view-bg">
     <div class="container">
         <div class="fullscreen-bg">
             <video loop muted autoplay poster="video/plane.jpg" class="fullscreen-bg__video">
@@ -46,7 +46,7 @@
 <section class="first">
     <div class="container">
         <h1 class="about__h1 revealator-slideup revealator-delay1 revealator-once">ABOUT</h1>
-        <p class="about__txt">
+        <p class="about__txt revealator-slideleft revealator-once">
 
             I'm Natalie, a web designer and developer.
             I specialize in the development of WordPress, HTML5, CSS3, Java Script sites.
@@ -56,7 +56,7 @@
 
         </p>
 
-        <p class="about__txt">
+        <p class="about__txt revealator-slideleft revealator-once">
 
             Before deadline the project, I check the code for validity.
             My customers are always happy with the result.
@@ -67,11 +67,11 @@
 
 <section class="works">
     <div class="container">
-        <h1 class="work__txt">
+        <h1 class="work__txt revealator-slideup revealator-delay1 revealator-once">
             works
         </h1>
-        <h2 class="works__txt2">pro skatepark</h2>
-        <p class="works__p">
+        <h2 class="works__txt2 revealator-slideright">pro skatepark</h2>
+        <p class="works__p revealator-slideright">
             Landing Page<br/>
             Technologies: HTML5, CSS3, Java Script, jQuery, Bootstrap.
         </p>
@@ -94,7 +94,8 @@
             </div>
 
             <div class="item">
-                <img src="https://st2.depositphotos.com/3815695/5375/i/950/depositphotos_53750895-stock-photo-rainbow-spa-bath-salt-crystals.jpg" alt="Третий слайд">
+                <img src="https://st2.depositphotos.com/3815695/5375/i/950/depositphotos_53750895-stock-photo-rainbow-spa-bath-salt-crystals.jpg"
+                     alt="Третий слайд">
                 <div class="slideText">Заголовок слайда 3</div>
             </div>
 
@@ -121,26 +122,27 @@
 
 <section class="contacts">
     <div class="container">
-        <h1 class="work__txt">
+        <h1 class="work__txt revealator-slideup revealator-delay1 revealator-once">
             contacts
         </h1>
-        <h2 class="works__txt2">Frontend Developer</h2>
+        <h2 class="works__txt2 revealator-slideleft revealator-once">Frontend Developer</h2>
         <p>
-            <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
-            <img src="" alt="">
-            <span> om36134@gmail.com</span>
+            <i class="fa fa-envelope-open-o revealator-slideleft revealator-once" aria-hidden="true">
+                om36134@gmail.com
+            </i>
         </p>
         <p>
 
-            <i class="fa fa-paper-plane" aria-hidden="true"></i>
-            <img src="" alt="">
-            <span>066-043-99-98</span>
+            <i class="fa fa-paper-plane revealator-slideleft revealator-once" aria-hidden="true">
+                066-043-99-98
+            </i>
         </p>
     </div>
 </section>
 
 
 <!--<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src=" https://code.jquery.com/jquery-3.3.1.min.js"></script>
