--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div class="left-menu"></div>
             <div class="collaps">
                 <nav>
-                    <div class="nav-toggle"><span></span></div>
+                    <!--<div class="nav-toggle"><span></span></div>-->
                     <p class="nav-toggle-p ">
-                        OK-SANA
+                        не закончен
                     </p>
                 </nav>
                 <h1 class="header-h1 revealator-slideright">
@@ -47,13 +47,10 @@
     <div class="container">
         <h1 class="about__h1 revealator-slideup revealator-delay1 revealator-once">ABOUT</h1>
         <p class="about__txt revealator-slideleft revealator-once">
-
-            I'm Natalie, a web designer and developer.
-            I specialize in the development of WordPress, HTML5, CSS3, Java Script sites.
-            I can easily create a website of any complexity, add a lot of interesting and cool things (animation,
-            slider, gallery, Hover Effects for the menu). The websites that I develop are responsive and also have basic
-            SEO optimization.
-
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Aliquid aspernatur necessitatibus, obcaecati possimus quibusdam sunt.
+            Aliquid dignissimos ducimus ea enim, laboriosam laborum
+            modi nam non perferendis recusandae temporibus, unde voluptatum.
         </p>
 
         <p class="about__txt revealator-slideleft revealator-once">
