--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 
+
 <header class="view-bg">
     <div class="container">
         <div class="fullscreen-bg">
@@ -31,6 +32,7 @@
                     <p class="nav-toggle-p ">
                         не закончен
                     </p>
+                    <a href="itp.html">новая страница</a>
                 </nav>
                 <h1 class="header-h1 revealator-slideright">
                     The most important thing in work is to love what you do!
